--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
   },
   "homepage": "https://github.com/change-autor/create-app-config#readme",
   "dependencies": {
+    "@types/shelljs": "^0.8.11",
     "axios": "^1.2.0",
     "chalk": "3.0.0",
     "inquirer": "8.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.5",
+    "utils-react": "^1.0.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
